--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "chance": "^1.0.2",
-    "express": "^4.13.4",
-    "md5": "^2.1.0"
+    "express": "^4.17.3",
+    "md5": "^2.1.0",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
+    "morgan": "^1.10.0",
     "nodemon": "^1.9.2"
   }
 }
